@@ -140,13 +140,13 @@ selected_frame_level_changed_event (int level)
 }
 
 void
-context_changed_event (int num)
+selected_thread_changed_event (int thread_num)
 {
   if (gdb_events_debug)
-    fprintf_unfiltered (gdb_stdlog, "context_changed_event\n");
-  if (!current_event_hooks->context_changed)
+    fprintf_unfiltered (gdb_stdlog, "selected_thread_changed_event\n");
+  if (!current_event_hooks->selected_thread_changed)
     return;
-  current_event_hooks->context_changed (num);
+  current_event_hooks->selected_thread_changed (thread_num);
 }
 
 #endif
@@ -183,7 +183,7 @@ enum gdb_event
   architecture_changed,
   target_changed,
   selected_frame_level_changed,
-  context_changed,
+  selected_thread_changed,
   nr_gdb_events
 };
 
@@ -222,9 +222,9 @@ struct selected_frame_level_changed
     int level;
   };
 
-struct context_changed
+struct selected_thread_changed
   {
-    int num;
+    int thread_num;
   };
 
 struct event
@@ -240,7 +240,7 @@ struct event
 	struct tracepoint_delete tracepoint_delete;
 	struct tracepoint_modify tracepoint_modify;
 	struct selected_frame_level_changed selected_frame_level_changed;
-	struct context_changed context_changed;
+	struct selected_thread_changed selected_thread_changed;
       }
     data;
   };
@@ -337,11 +337,11 @@ queue_selected_frame_level_changed (int level)
 }
 
 static void
-queue_context_changed (int num)
+queue_selected_thread_changed (int thread_num)
 {
   struct event *event = XMALLOC (struct event);
-  event->type = context_changed;
-  event->data.context_changed.num = num;
+  event->type = selected_thread_changed;
+  event->data.selected_thread_changed.thread_num = thread_num;
   append (event);
 }
 
@@ -400,9 +400,9 @@ gdb_events_deliver (struct gdb_events *vector)
 	  vector->selected_frame_level_changed
 	    (event->data.selected_frame_level_changed.level);
 	  break;
-	case context_changed:
-	  vector->context_changed
-	    (event->data.context_changed.num);
+	case selected_thread_changed:
+	  vector->selected_thread_changed
+	    (event->data.selected_thread_changed.thread_num);
 	  break;
 	}
       delivering_events = event->next;
@@ -425,7 +425,7 @@ _initialize_gdb_events (void)
   queue_event_hooks.architecture_changed = queue_architecture_changed;
   queue_event_hooks.target_changed = queue_target_changed;
   queue_event_hooks.selected_frame_level_changed = queue_selected_frame_level_changed;
-  queue_event_hooks.context_changed = queue_context_changed;
+  queue_event_hooks.selected_thread_changed = queue_selected_thread_changed;
 #endif
 
   c = add_set_cmd ("eventdebug", class_maintenance, var_zinteger,
