@@ -67,7 +67,7 @@ f:void:tracepoint_modify:int number:number
 f:void:architecture_changed:void
 f:void:target_changed:void
 f:void:selected_frame_level_changed:int level:level
-f:void:context_changed:int num:num
+f:void:selected_thread_changed:int thread_num:thread_num
 #*:void:annotate_starting_hook:void
 #*:void:annotate_stopped_hook:void
 #*:void:annotate_signalled_hook:void
